@@ -1,5 +1,10 @@
 <h1>News</h1>
 
+<h2>Version 0.8.15</h2>
+<p>Build system and binary dependency update only. xjadeo binaries now feature
+<a href="http://www.ffmpeg.org/">ffmpeg</a> v7.1.2 (except OSC/Intel which uses v6.1.3)
+</p>
+
 <h2>Version 0.8.14</h2>
 <p>Fix JACK Transport control when using pipewire
 </p>
