@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.48.1.
-.TH XJREMOTE "1" "April 2024" "xjremote version 0.8.13" "User Commands"
+.TH XJREMOTE "1" "November 2025" "xjremote version 0.8.15" "User Commands"
 .SH NAME
 xjremote \- X Jack Video Monitor Remote Control
 .SH SYNOPSIS
@@ -54,7 +54,7 @@ Report bugs to Robin Gareus <robin@gareus.org>
 Website: <https://github.com/x42/xjadeo>
 .TP
 built from:
-scm\-v0.8.13
+scm\-v0.8.15
 .TP
 configuration:
 [ POSIX\-MQueue ]
